# lib_osal

./: CMakeLists.txt  README.md
include/lib_osal/: Mutex.h  Mutex_Impl.h  System.h  System_Impl.h
mocks/: CMakeLists.txt
src/: Mutex.c
